Update UI design

--- a/app/src/main/res/layout/activity_agri_lab.xml
+++ b/app/src/main/res/layout/activity_agri_lab.xml
@@ -149,7 +149,7 @@
         android:id="@+id/BtnIntermediate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="15dp"
         android:text="Intermediate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/BtnBeginner"
@@ -161,6 +161,7 @@
         android:layout_width="130dp"
         android:layout_height="48dp"
         android:text="Andvanced"
+        android:layout_marginEnd="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
