--- a/app/src/main/res/layout/activity_crop_result.xml
+++ b/app/src/main/res/layout/activity_crop_result.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.soil_analysis.CropResultActivity"
-    android:background="@drawable/soil_analysis_background">
+    android:background="@drawable/main_background">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayoutCropResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green"
+        android:background="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -35,16 +35,16 @@
     <FrameLayout
         android:id="@+id/cropResultFrameLayout"
         android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:layout_height="80dp"
         android:layout_marginStart="58dp"
         android:layout_marginTop="110dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/crop_management_icon" />
@@ -58,7 +58,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:textColor="@color/green"/>
+            android:textColor="@color/purple"/>
 
         <TextView
             android:layout_width="200dp"
@@ -66,7 +66,7 @@
             android:layout_marginStart="90dp"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:text="Provide planting time and management tips"
             android:textSize="10sp" />
 
