--- a/app/src/main/res/layout/activity_crop_recommendation.xml
+++ b/app/src/main/res/layout/activity_crop_recommendation.xml
@@ -6,21 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.soil_analysis.SoilAnalysisActivity"
-    android:background="@drawable/soil_analysis_background">
+    android:background="@drawable/main_background">
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:layout_height="80dp"
         android:layout_marginStart="58dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/crop_management_icon" />
@@ -28,13 +28,13 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_marginStart="100dp"
+            android:layout_marginStart="90dp"
             android:layout_marginTop="5dp"
             android:text="Crop Management"
             android:textSize="20dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:textColor="@color/green"/>
+            android:textColor="@color/purple"/>
 
         <TextView
             android:layout_width="200dp"
@@ -42,7 +42,7 @@
             android:layout_marginStart="90dp"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:text="Provide planting time and management tips"
             android:textSize="10sp" />
 
@@ -66,7 +66,7 @@
                 android:text="Nitrogen"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -74,7 +74,7 @@
                 android:text="Phosphorus"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
         </LinearLayout>
 
@@ -89,7 +89,7 @@
             <FrameLayout
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:background="@drawable/your_rounded_shape">
+                android:background="@drawable/background_search1">
 
                 <EditText
                     android:id="@+id/cropNitrogenEditText"
@@ -102,7 +102,7 @@
             <FrameLayout
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:background="@drawable/your_rounded_shape">
+                android:background="@drawable/background_search1">
 
                 <EditText
                     android:id="@+id/cropPhosphorusEditText"
@@ -125,7 +125,7 @@
                 android:text="Potassium"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -133,7 +133,7 @@
                 android:text="PH Value"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
         </LinearLayout>
 
@@ -148,7 +148,7 @@
             <FrameLayout
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:background="@drawable/your_rounded_shape">
+                android:background="@drawable/background_search1">
 
                 <EditText
                     android:id="@+id/cropPotassiumEditText"
@@ -161,7 +161,7 @@
             <FrameLayout
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:background="@drawable/your_rounded_shape">
+                android:background="@drawable/background_search1">
 
                 <EditText
                     android:id="@+id/cropPHValueEditText"
@@ -179,13 +179,13 @@
             android:text="Temperature"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
             android:layout_width="400dp"
             android:layout_height="50dp"
-            android:background="@drawable/your_rounded_shape"
+            android:background="@drawable/background_search1"
             android:layout_margin="5dp">
 
             <EditText
@@ -202,13 +202,13 @@
             android:text="Humidity"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/mustard_yellow"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
             android:layout_width="400dp"
             android:layout_height="50dp"
-            android:background="@drawable/your_rounded_shape"
+            android:background="@drawable/background_search1"
             android:layout_margin="5dp">
 
             <EditText
@@ -225,13 +225,13 @@
             android:text="Rainfall"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/mustard_yellow"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
             android:layout_width="400dp"
             android:layout_height="50dp"
-            android:background="@drawable/your_rounded_shape"
+            android:background="@drawable/background_search1"
             android:layout_margin="5dp">
 
             <EditText
@@ -252,16 +252,16 @@
                 android:id="@+id/cropBackButton"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/green"
                 android:text="Back"
+                android:backgroundTint="@color/black"
                 android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/cropSubmitButton"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/green"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/black"
                 android:text="Submit"/>
 
         </LinearLayout>
