--- a/app/src/main/res/layout/activity_main_p1.xml
+++ b/app/src/main/res/layout/activity_main_p1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.MainActivityP1"
-    android:background="@color/mustard_yellow">
+    android:background="@drawable/main_background">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -32,8 +32,8 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="92dp"
         android:src="@drawable/agriculture"
@@ -44,13 +44,13 @@
         android:id="@+id/textViewMainP1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:text="Welcome"
         android:textColor="@color/purple"
         android:textSize="20dp"
-        android:textStyle="italic"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,24 +72,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintCircleRadius="10dp"
-        android:background="@drawable/your_rounded_shape">
+        android:background="@drawable/background_search1">
 
-        <ImageButton
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="2dp"
+            android:src="@drawable/weather_menu_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/purple"
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="Finding up-to-date weather information for a specific location."/>
+
+        <Button
             android:id="@+id/imageButtonWeatherInfoP1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginStart="80dp"
+            android:text="View >"
             android:src="@drawable/weather_menu_img"
             android:contentDescription="@string/weather_info"/>
 
         <TextView
-            android:layout_width="200dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/weather_info"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="80dp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/purple"/>
 
     </FrameLayout>
 
@@ -100,25 +123,47 @@
         android:layout_marginTop="350dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/your_rounded_shape">
+        android:background="@drawable/background_search1">
 
-        <ImageButton
-            android:id="@+id/imageButtonSoilInfoP1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="2dp"
             android:src="@drawable/soil_analysis_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/purple"
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="Determine the nutrient content, composition, and other characteristics of soil"/>
+
+        <Button
+            android:id="@+id/imageButtonSoilInfoP1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginStart="80dp"
+            android:text="View >"
             android:contentDescription="@string/soil_info"/>
 
         <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/soil_info"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="80dp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:textSize="20dp"
             android:gravity="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/purple"/>
 
     </FrameLayout>
 
