--- a/app/src/main/res/layout/activity_main_part5_s1.xml
+++ b/app/src/main/res/layout/activity_main_part5_s1.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:text="PASS"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/purple"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="Prosperity Assistance and Support Service"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/purple"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="@color/purple"
         android:text="Direct Financial Aid Platform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/FMT"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="@color/purple"
         android:text="Finance Management Tools"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:id="@+id/FBSL"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="@color/purple"
         android:text="Food Bank and Shelter Location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
