--- a/app/src/main/res/layout/activity_main_soil.xml
+++ b/app/src/main/res/layout/activity_main_soil.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/soil_analysis_img"
+    android:background="@drawable/main_background"
     tools:context=".Part1.soil_analysis.MainSoilActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green"
+        android:background="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -37,7 +37,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="58dp"
         android:layout_marginTop="112dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -75,7 +75,7 @@
         android:layout_height="180dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -95,21 +95,20 @@
             android:textSize="18sp"
             android:text="Soil Analysis"
             android:textStyle="bold"
-            android:textColor="@color/green"/>
+            android:textColor="@color/purple"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:text="Provide planting suggestion based on soil type"/>
 
         <Button
             android:id="@+id/soilAnalysisButtonP1"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/green"
             android:layout_marginStart="30dp"
             android:layout_marginTop="120dp"
             android:text="Check >>"/>
@@ -121,7 +120,7 @@
         android:layout_height="180dp"
         android:layout_marginStart="212dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -141,21 +140,20 @@
             android:textSize="18sp"
             android:text="Crop Recomment"
             android:textStyle="bold"
-            android:textColor="@color/green"/>
+            android:textColor="@color/purple"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:text="Provide planting time and management tips"/>
 
         <Button
             android:id="@+id/cropRecommentButtonP1"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/green"
             android:layout_marginStart="30dp"
             android:layout_marginTop="120dp"
             android:text="Check >>"/>
