--- a/app/src/main/res/layout/activity_main_weather.xml
+++ b/app/src/main/res/layout/activity_main_weather.xml
@@ -29,7 +29,7 @@
             android:layout_marginTop="20dp"
             android:text="Get Weather By Location"
             android:backgroundTint="@color/white"
-            android:textColor="@color/blue"
+            android:textColor="@color/purple"
             android:textSize="24dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"/>
@@ -41,7 +41,7 @@
             android:layout_marginTop="8dp"
             android:text="Get Weather By City Name"
             android:backgroundTint="@color/white"
-            android:textColor="@color/blue"
+            android:textColor="@color/purple"
             android:textSize="24dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"/>
