--- a/app/src/main/res/layout/activity_page18.xml
+++ b/app/src/main/res/layout/activity_page18.xml
@@ -329,7 +329,7 @@
             android:id="@+id/page18_aboutUsBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="About us"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
@@ -338,16 +338,16 @@
             android:id="@+id/page18_resourcesBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#30D1E6"
+            android:backgroundTint="@color/purple"
             android:text="Resources"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             app:cornerRadius="0dp" />
 
         <Button
             android:id="@+id/page18_donationBtnP2"
             android:layout_width="113dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="Donation"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
@@ -356,7 +356,7 @@
             android:id="@+id/page18_getHelpBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="Help"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
