--- a/app/src/main/res/layout/activity_page23.xml
+++ b/app/src/main/res/layout/activity_page23.xml
@@ -21,7 +21,7 @@
             android:id="@+id/page23_aboutUsBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="About us"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
@@ -30,7 +30,7 @@
             android:id="@+id/page23_resourcesBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="Resources"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
@@ -39,7 +39,7 @@
             android:id="@+id/page23_donationBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEEAF0"
+            android:backgroundTint="@color/light_grey"
             android:text="Donation"
             android:textColor="#000000"
             app:cornerRadius="0dp" />
@@ -48,9 +48,9 @@
             android:id="@+id/page23_getHelpBtnP2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#30D1E6"
+            android:backgroundTint="@color/purple"
             android:text="Help"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             app:cornerRadius="0dp" />
     </LinearLayout>
 
@@ -58,7 +58,6 @@
         android:id="@+id/page23_contactUsBtnP2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#576AD7"
         android:text="Contact Us"
         android:textSize="18sp"
         app:cornerRadius="0dp"
