--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -69,7 +69,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="359dp"
         android:layout_marginEnd="163dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="@color/purple"
         android:text="Submit"
         android:textColor="#FFF" />
 </RelativeLayout>
