--- a/app/src/main/res/layout/activity_schedule_appointment.xml
+++ b/app/src/main/res/layout/activity_schedule_appointment.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Book"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/purple"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
