--- a/app/src/main/res/layout/activity_soil_analysis.xml
+++ b/app/src/main/res/layout/activity_soil_analysis.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.soil_analysis.SoilAnalysisActivity"
-    android:background="@drawable/soil_analysis_background">
+    android:background="@drawable/main_background">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -14,7 +14,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="58dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/your_rounded_shape"
+        android:background="@drawable/background_search1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -34,7 +34,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:textColor="@color/green"/>
+            android:textColor="@color/purple"/>
 
         <TextView
             android:layout_width="200dp"
@@ -42,7 +42,7 @@
             android:layout_marginStart="90dp"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:text="Provide planting suggestions based on soil types"
             android:textSize="10sp" />
 
@@ -66,7 +66,7 @@
                 android:text="Nitrogen"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -74,7 +74,7 @@
                 android:text="Phosphorus"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
         </LinearLayout>
 
@@ -125,7 +125,7 @@
                 android:text="Potassium"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -133,7 +133,7 @@
                 android:text="PH Value"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
         </LinearLayout>
 
@@ -179,7 +179,7 @@
             android:text="Temperature"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
@@ -202,7 +202,7 @@
             android:text="Humidity"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/mustard_yellow"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
@@ -225,7 +225,7 @@
             android:text="Rainfall"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/mustard_yellow"
+            android:textColor="@color/purple"
             android:textStyle="bold"/>
 
         <FrameLayout
@@ -252,7 +252,7 @@
                 android:id="@+id/soilBackButton"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/black"
                 android:text="Back"
                 android:layout_margin="5dp" />
 
@@ -260,7 +260,7 @@
                 android:id="@+id/soilSubmitButton"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/black"
                 android:layout_margin="5dp"
                 android:text="Submit"/>
 
