--- a/app/src/main/res/layout/activity_weather_next4.xml
+++ b/app/src/main/res/layout/activity_weather_next4.xml
@@ -13,7 +13,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,7 +38,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="London , GB"
-        android:textColor="@color/black"
+        android:textColor="@color/purple"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/appBarLayout"
