--- a/app/src/main/res/layout/connection_item_part3f1.xml
+++ b/app/src/main/res/layout/connection_item_part3f1.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         android:text="Happy Farm"
-        android:textColor="@color/green"/>
+        android:textColor="@color/purple"/>
 
     <LinearLayout
         android:id="@+id/linearLayout1P3F1"
