--- a/app/src/main/res/layout/crop_item.xml
+++ b/app/src/main/res/layout/crop_item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:background="@drawable/background_search1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
-        android:background="@color/mustard_yellow">
+        android:layout_margin="5dp"
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/cropImageViewP1"
@@ -30,6 +33,7 @@
                 android:text="Rice"
                 android:textStyle="bold"
                 android:textSize="25sp"
+                android:textColor="@color/purple"
                 android:layout_marginStart="10dp" />
 
             <LinearLayout
@@ -41,6 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Planting Time: "
+                    android:textColor="@color/purple"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp" />
 
@@ -62,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Manage Tips: "
+                    android:textColor="@color/purple"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp" />
 
@@ -78,4 +84,4 @@
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
