--- a/app/src/main/res/layout/fragment_reservation_booking_part3.xml
+++ b/app/src/main/res/layout/fragment_reservation_booking_part3.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/backgroundp3">
+            android:background="@drawable/main_background">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                     android:id="@+id/buttonResBookingP3F2"
                     android:layout_width="200dp"
                     android:text="Booking"
-                    android:backgroundTint="@color/green"
+                    android:backgroundTint="@color/purple"
                     android:layout_marginStart="5dp"
                     android:textColor="@color/white"
                     android:layout_height="wrap_content"
