--- a/app/src/main/res/layout/fragment_reservation_part3.xml
+++ b/app/src/main/res/layout/fragment_reservation_part3.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/backgroundp3">
+        android:background="@drawable/main_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="Experience"
                 android:layout_marginStart="3dp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/purple"
                 app:cornerRadius="0dp"/>
 
             <Button
