--- a/app/src/main/res/layout/fragment_subscription_details_part3.xml
+++ b/app/src/main/res/layout/fragment_subscription_details_part3.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:text="Subscription Plan"
                 android:layout_marginStart="3dp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/purple"
                 app:cornerRadius="0dp"/>
 
             <Button
@@ -59,7 +59,7 @@
                 android:gravity="center"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:text="Cabbage"/>
 
             <TextView
@@ -69,7 +69,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginStart="5dp"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple"/>
 
         </LinearLayout>
 
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:textSize="18dp"
                 android:text="Location: "/>
 
@@ -107,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:textSize="18dp"
                 android:text="Category: "/>
 
@@ -132,7 +132,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:textStyle="bold"
                 android:textSize="18dp"
                 android:text="Weekly Price: "/>
@@ -169,7 +169,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:textStyle="bold"
                 android:textSize="18dp"
                 android:text="Monthly Price: "/>
@@ -208,7 +208,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:text="Select Plans: "/>
 
             <LinearLayout
@@ -248,7 +248,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:text="Total Prices: "/>
@@ -281,7 +281,7 @@
                 android:id="@+id/backButtonSubscriptionDetailsP3F3"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/purple"
                 android:text="Back"
                 app:cornerRadius="0dp"/>
 
@@ -290,7 +290,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/purple"
                 android:text="Subscribe"
                 app:cornerRadius="0dp"/>
 
