--- a/app/src/main/res/layout/res_booking_items_part3f2.xml
+++ b/app/src/main/res/layout/res_booking_items_part3f2.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:text="Strawberry Picking"/>
 
             <LinearLayout
