--- a/app/src/main/res/layout/sub_booking_item_part3f3.xml
+++ b/app/src/main/res/layout/sub_booking_item_part3f3.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/purple"
                 android:text="Cabbage"/>
 
             <LinearLayout
