--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="grey">#808080</color>
     <color name="light_grey">#C0C0C0</color>
     <color name="teal_200">#80CBC4</color>
+    <color name="holo_light_blue">#03A9F4</color>
+
 </resources>
