Update UI design

--- a/app/src/main/res/layout/activity_main_p1.xml
+++ b/app/src/main/res/layout/activity_main_p1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.MainActivityP1"
-    android:background="@drawable/main_background">
+    android:background="@drawable/purple_farmer_background1">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -59,8 +59,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="288dp"
-        android:text="_______________________________________________________________"
-        android:textColor="@color/purple"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:text="_____________________________"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
