--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="light_grey">#C0C0C0</color>
     <color name="teal_200">#80CBC4</color>
     <color name="holo_light_blue">#03A9F4</color>
+    <color name="pink">#D43790</color>
 
 </resources>
