--- a/app/src/main/res/layout/activity_main_part5_s8.xml
+++ b/app/src/main/res/layout/activity_main_part5_s8.xml
@@ -61,7 +61,7 @@
         android:layout_height="450dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="140dp"
-        android:background="@drawable/border8dpblue"
+        android:background="@drawable/border8dp_purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
