--- a/app/src/main/res/drawable/view_014565_colour.xml
+++ b/app/src/main/res/drawable/view_014565_colour.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- White background -->
+    <solid android:color="#FFFFFF" />
+
     <!-- Rounded corners -->
-    <corners android:radius="4dp" />
+    <corners android:radius="16dp" />
 
     <!-- Border -->
     <stroke
-        android:width="4dp"
-        android:color="@color/purple" />
+        android:width="8dp"
+        android:color="#014565" />
 </shape>
