--- a/app/src/main/res/layout/activity_crop_recommendation.xml
+++ b/app/src/main/res/layout/activity_crop_recommendation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.soil_analysis.SoilAnalysisActivity"
-    android:background="@drawable/purple_farmer_background">
+    android:background="@drawable/background_image">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -66,7 +66,7 @@
                 android:text="Nitrogen"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -74,7 +74,7 @@
                 android:text="Phosphorus"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -125,7 +125,7 @@
                 android:text="Potassium"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
             <TextView
                 android:layout_width="200dp"
@@ -133,7 +133,7 @@
                 android:text="PH Value"
                 android:textStyle="bold"
                 android:gravity="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -179,7 +179,7 @@
             android:text="Temperature"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold"/>
 
         <FrameLayout
@@ -202,7 +202,7 @@
             android:text="Humidity"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold"/>
 
         <FrameLayout
@@ -225,7 +225,7 @@
             android:text="Rainfall"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold"/>
 
         <FrameLayout
