--- a/app/src/main/res/layout/activity_main_p1.xml
+++ b/app/src/main/res/layout/activity_main_p1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part1.MainActivityP1"
-    android:background="@drawable/purple_farmer_background1">
+    android:background="@drawable/background_image">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -64,7 +64,7 @@
         android:textStyle="bold"
         android:textSize="30dp"
         android:text="_____________________________"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -136,7 +136,7 @@
             android:layout_marginTop="10dp"
             app:civ_border_color="@color/black"
             app:civ_border_width="2dp"
-            android:src="@drawable/soil_analysis_img"
+            android:src="@drawable/purple_farmer_background1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
