--- a/app/src/main/res/layout/activity_main_part5_s2.xml
+++ b/app/src/main/res/layout/activity_main_part5_s2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Part5.MainActivityPart5S2"
-    android:background="@drawable/main_background">
+    android:background="@drawable/background_image">
 
     <!-- Title TextView -->
 
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:text="Direct Financial Aid Platform"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="110dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/background_search1"
         android:orientation="horizontal"
@@ -73,7 +73,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="65dp"
         android:text="Please select for Financial Aid"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -87,7 +87,17 @@
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/border4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/border4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
